# tiny_evm

./: .gitignore  Cargo.toml  README.md
resources/: event.sol  sha3.sol  store_1.sol  store_2.sol  store_3.sol
src/: main.rs
